[ci skip] Add a note about system lag 0f0a024b5e9d6a68b4400e7bf90c0befd28105f5

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7fe83f14",
+   "id": "9f5e28e0",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aa6a806",
+   "id": "446c283a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acab01da",
+   "id": "80c59d44",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ead8282",
+   "id": "6379cbbe",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7061e4",
+   "id": "4cfd99ed",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa93532f",
+   "id": "59fba3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24cb9c31",
+   "id": "6859ea7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fadc4723",
+   "id": "b846c912",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f9575a",
+   "id": "8634b581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca9095e",
+   "id": "ff36d0ed",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86343542",
+   "id": "0f15e502",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b476b17c",
+   "id": "a854f7c4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66001156",
+   "id": "4a3ea3c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a4c8280",
+   "id": "d6070956",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "629e0cdf",
+   "id": "67c6db16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bfacda6",
+   "id": "6575494b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeba9364",
+   "id": "53e99c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8469f37f",
+   "id": "d693349c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e227c803",
+   "id": "9b88a0d1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a3b127",
+   "id": "d072632a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "011c8860",
+   "id": "59c6969b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae3117e",
+   "id": "7c7464f8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Remark lagged features engineering and system lag\n",
+    "\n",
+    "When working with historical data, we often have access to all the past\n",
+    "measurements in the dataset. However, when we want to use the lagged features\n",
+    "in a forecasting model, we need to be careful about the length of the\n",
+    "**system lag**: the time between a timestamped measurement is made in the\n",
+    "real world and the time the record is made available to the downstream\n",
+    "application (in our case, a deployed predictive pipeline).\n",
+    "\n",
+    "System lag is rarely explicitly represented in the data sources even if such\n",
+    "delay can be as large as several hours or even days and can sometimes be\n",
+    "irregular. For instance, if there is a human intervention in the data\n",
+    "recording process, holidays and weekends can punctually add significant\n",
+    "delay.\n",
+    "\n",
+    "If the system lag is larger than the maximum feature engineering lag we want\n",
+    "to use in our feature engineering, the resulting features will have missing\n",
+    "values when deployed. More importantly, if the system lag is not handled\n",
+    "explicitly, those resulting missing values will only be present in the\n",
+    "features engineered for the deployed system but not present in the features\n",
+    "engineered to train and backtest the system before deployment.\n",
+    "\n",
+    "This structural discrepancy will degrade the performance of the deployed\n",
+    "model compared to the performance estimated from backtesting on the\n",
+    "historical data.\n",
+    "\n",
+    "We will set this problem aside for now but discuss it again in a later\n",
+    "section of this tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dfb5d88",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d581f676",
+   "id": "3d2972b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c8bffc1",
+   "id": "a011991e",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d61d3686",
+   "id": "b3011b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "807818e3",
+   "id": "a2587e41",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "437200e6",
+   "id": "4d282d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f74585b2",
+   "id": "6c9f1f9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bef494a",
+   "id": "c33a3de7",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebc992d",
+   "id": "590b0df4",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cf05870",
+   "id": "f3f469d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1727d723",
+   "id": "200516ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "287ac38f",
+   "id": "381262e5",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6057946",
+   "id": "5e3e8d79",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5cb793",
+   "id": "6aedd2f4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4cfb405",
+   "id": "f8371637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02cfb16e",
+   "id": "69876540",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776c59c0",
+   "id": "44b3e08d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feea0fcd",
+   "id": "ee722a57",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2523415",
+   "id": "d513b417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3f4739",
+   "id": "aca1cc6d",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fca547dc",
+   "id": "20eae6c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fca223d8",
+   "id": "6e54f09e",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f39abbd",
+   "id": "2da0c794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "924b5a0f",
+   "id": "29492942",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba07ad87",
+   "id": "e1d84772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486e66ff",
+   "id": "1ad07002",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe84ff68",
+   "id": "7f79f3bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "908250b2",
+   "id": "a498371c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064ffdfe",
+   "id": "f99da95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf78106a",
+   "id": "0d48d5ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ffa72bb",
+   "id": "431c5017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4963f68",
+   "id": "d5e462be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab83e13",
+   "id": "daf0e1da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a6ef5d",
+   "id": "12aee883",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1514,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a2cea4",
+   "id": "e523e819",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b8b562e",
+   "id": "cf4aa645",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1548,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf22f4dc",
+   "id": "63c75735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ccb030",
+   "id": "1db1a3a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38734c95",
+   "id": "8b01fb27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "226f077c",
+   "id": "55256c0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0d5151",
+   "id": "2bb8e22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fa3ae9c",
+   "id": "9debf2d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c87086d0",
+   "id": "72bf7476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e3533b1",
+   "id": "45fd4de0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9380b8b",
+   "id": "cb5efac2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e55be1ed",
+   "id": "86895717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ee7e9a",
+   "id": "dd66a99a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46bcd15",
+   "id": "558d5cf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57d69245",
+   "id": "784fd745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a962ba5",
+   "id": "af4f61dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad273e5",
+   "id": "f4eb5b49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d0987a",
+   "id": "c1d52cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad84806d",
+   "id": "40741d61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1985f5a0",
+   "id": "d6c9df10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfa78db",
+   "id": "425f3e69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0bc6c19",
+   "id": "71bec734",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae170bde",
+   "id": "09f15ff5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97aba711",
+   "id": "ad208b40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa9b144",
+   "id": "863b275c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99308a9",
+   "id": "16e5e343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a92f39f",
+   "id": "188fefc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b250887",
+   "id": "40a2abd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad76bd98",
+   "id": "7eb664fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfdadb81",
+   "id": "3a5b11ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f134efe",
+   "id": "4e5717f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89476853",
+   "id": "e9d1f438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c38ce6",
+   "id": "2b39cfce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2160,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75e3de90",
+   "id": "78bc4fbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2172,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21836ee3",
+   "id": "5b8139db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d384d761",
+   "id": "0b6f627d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dc76d5d",
+   "id": "45212674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4e7ed61",
+   "id": "309a48bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f4ba0c",
+   "id": "dd585e56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2262,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e174da",
+   "id": "6a992012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2280,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc2b088",
+   "id": "ef9f9476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd773a7",
+   "id": "d0aa9b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2340,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2564bb51",
+   "id": "28c4bb6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2365,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98f7afa0",
+   "id": "876b60e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2379,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8776315",
+   "id": "55c59161",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694060a7",
+   "id": "03fc3d91",
    "metadata": {},
    "outputs": [],
    "source": []
