--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39bd584f",
+   "id": "6ba6228f",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c115ae",
+   "id": "1597ac80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff3a4f0",
+   "id": "35bc0572",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fa5ac8",
+   "id": "5ad72a25",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9cdad56",
+   "id": "2cc72f34",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9d6948",
+   "id": "d60274cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b697cde6",
+   "id": "068d0cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "303031b2",
+   "id": "0caf15f1",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf23773",
+   "id": "d4af4be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd6278a",
+   "id": "2dd119a1",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bffd566",
+   "id": "b2cc338d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464f435c",
+   "id": "8edaf151",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f6bcdb",
+   "id": "16c47267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f267d1f",
+   "id": "753929e6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7250826c",
+   "id": "9eeb3ff8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "593926ac",
+   "id": "fad1067f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f43c397",
+   "id": "9afe61be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c6a24aa",
+   "id": "e0a3a31f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26bc92a",
+   "id": "a517d0d5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3302b30c",
+   "id": "e39bbeef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e02e3493",
+   "id": "f3b20a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21da857",
+   "id": "eaec902f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Remark lagged features engineering and system lag\n",
+    "\n",
+    "When working with historical data, we often have access to all the past\n",
+    "measurements in the dataset. However, when we want to use the lagged features\n",
+    "in a forecasting model, we need to be careful about the length of the\n",
+    "**system lag**: the time between a timestamped measurement is made in the\n",
+    "real world and the time the record is made available to the downstream\n",
+    "application (in our case, a deployed predictive pipeline).\n",
+    "\n",
+    "System lag is rarely explicitly represented in the data sources even if such\n",
+    "delay can be as large as several hours or even days and can sometimes be\n",
+    "irregular. For instance, if there is a human intervention in the data\n",
+    "recording process, holidays and weekends can punctually add significant\n",
+    "delay.\n",
+    "\n",
+    "If the system lag is larger than the maximum feature engineering lag we want\n",
+    "to use in our feature engineering, the resulting features will have missing\n",
+    "values when deployed. More importantly, if the system lag is not handled\n",
+    "explicitly, those resulting missing values will only be present in the\n",
+    "features engineered for the deployed system but not present in the features\n",
+    "engineered to train and backtest the system before deployment.\n",
+    "\n",
+    "This structural discrepancy will degrade the performance of the deployed\n",
+    "model compared to the performance estimated from backtesting on the\n",
+    "historical data.\n",
+    "\n",
+    "We will set this problem aside for now but discuss it again in a later\n",
+    "section of this tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a0b139b",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00d092df",
+   "id": "4b9ac44a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e499b40b",
+   "id": "060a6574",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e69faa2",
+   "id": "6f1b15f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23b6d98",
+   "id": "b1911bb2",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42a2383c",
+   "id": "0ea53e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6781f3ad",
+   "id": "810d7c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332929ab",
+   "id": "c2580ef5",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e8e0c8d",
+   "id": "afad0d1d",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15438c68",
+   "id": "b2ef286c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89c3b90b",
+   "id": "14378047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5cb34c",
+   "id": "7663e8af",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09666bd",
+   "id": "f4038553",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc46fe6",
+   "id": "93f1421d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6632dd77",
+   "id": "1ceec2e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c502e6f",
+   "id": "98d424ff",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43615d2a",
+   "id": "5f6ce3e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5dd1520",
+   "id": "d1bd4a93",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "046c2d49",
+   "id": "c6ae7da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "242c6784",
+   "id": "fddc2f4b",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a414dc",
+   "id": "b97054ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753bed22",
+   "id": "96872c8a",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138964aa",
+   "id": "e5503d4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d577f2",
+   "id": "8ceaf0c7",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acedf044",
+   "id": "26790923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "637f909f",
+   "id": "f698c9a4",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f380d123",
+   "id": "5255e53d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b4a51f",
+   "id": "4aa51634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1de00591",
+   "id": "929a6244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0c69e5c",
+   "id": "5082ed0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22f2480f",
+   "id": "b380b8da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aceb69cd",
+   "id": "c8374052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3438bad1",
+   "id": "2093be38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b324eda7",
+   "id": "666c9265",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1514,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1837ddaa",
+   "id": "a2221721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5271bec3",
+   "id": "d15a7d05",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1548,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fe251f3",
+   "id": "93c3856e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e478146",
+   "id": "4ade3069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fa31200",
+   "id": "d51be022",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a740f1",
+   "id": "78f8487e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3534be01",
+   "id": "5c9f914a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74952412",
+   "id": "af7eb2bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4caa47be",
+   "id": "dbf49f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d59782e",
+   "id": "cef4ba12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c041132a",
+   "id": "faec83fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3534c820",
+   "id": "4be53394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be02e832",
+   "id": "6ac3d6b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee852e0",
+   "id": "704748d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047dec35",
+   "id": "b39f8c92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea57ab7",
+   "id": "56cfab24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f2ad125",
+   "id": "5f301ae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f69f1bc",
+   "id": "d89a9689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53da48e6",
+   "id": "64224d82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43a26b14",
+   "id": "a42fd563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9f4101",
+   "id": "4f83a82a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "082dae9c",
+   "id": "de4f1e42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7e828d",
+   "id": "02fa047a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f940465c",
+   "id": "f7ee5705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b773254",
+   "id": "e5eb2726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f90d7ce",
+   "id": "1db536b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4716e1",
+   "id": "e13caab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf31384",
+   "id": "9c68f3d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c66a95b6",
+   "id": "11801e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5367d5de",
+   "id": "bf4a1772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f35bba",
+   "id": "15f76f00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9965ac",
+   "id": "a45a2bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553e0a93",
+   "id": "83c02663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2160,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eafba4d6",
+   "id": "b118856a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2172,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f8038d",
+   "id": "21b16ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704b5bca",
+   "id": "b818e596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8a4f68",
+   "id": "20715c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f0d85ad",
+   "id": "ba1daa3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a1296a",
+   "id": "883a15d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2262,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc70605",
+   "id": "76fc434b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2280,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a64ffa",
+   "id": "b34ed1b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187ea323",
+   "id": "827b94ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2340,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d76232a3",
+   "id": "66951719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2365,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731d4251",
+   "id": "ceac6177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2379,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45ae36e",
+   "id": "74b69bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6d370fa",
+   "id": "6e2e9861",
    "metadata": {},
    "outputs": [],
    "source": []
